[gd_scene load_steps=6 format=3 uid="uid://bmod306dnao1"]

[ext_resource type="Texture2D" uid="uid://dnh7qj54xcl6p" path="res://sprites/sword.png" id="1_q71x5"]
[ext_resource type="Script" path="res://scripts/sword.gd" id="1_xqgig"]

[sub_resource type="Animation" id="Animation_webmv"]
resource_name = "swing"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("swordSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(5, 5.65684),
"update": 0,
"values": [3.14159, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_03wsg"]
_data = {
"swing": SubResource("Animation_webmv")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pvmtj"]
size = Vector2(48, 95)

[node name="Sword" type="Node2D"]
script = ExtResource("1_xqgig")

[node name="swordSprite" type="Sprite2D" parent="."]
rotation = 3.14159
texture = ExtResource("1_q71x5")
offset = Vector2(0, -16)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_03wsg")
}

[node name="ParryBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParryBox"]
position = Vector2(24, -0.5)
shape = SubResource("RectangleShape2D_pvmtj")
debug_color = Color(0.619633, 0.35453, 1, 0.42)

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="ParryBox" to="." method="_on_parry_box_area_entered"]
